--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "homepage": "https://github.com/VKoshovec/teamProjJS6",
   "scripts": {
-    "start": "parcel src/*.html",
+    "start": "parcel src/*.html --open",
     "build": "parcel build src/*.html --public-url /teamProjJS6/"
   },
   "repository": {
@@ -15,7 +15,7 @@
   "author": "Koshovec Vladimir <koshovec.vladimir@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/goitacademy/parcel-project-template/issues"
+    "url": "https://github.com/VKoshovec/teamProjJS6/issues"
   },
   "dependencies": {
     "axios": "^1.2.1",
